--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,11 @@
 name = "strings"
 version = "0.0.1"
 authors = ["nrc <ncameron@mozilla.com>"]
+description = "String utilities, including an unbalanced Rope"
+repository = "https://github.com/nrc/strings.rs"
+readme = "README.md"
+license = "Apache-2.0/MIT"
+include = ["src/*.rs", "Cargo.toml"]
 
 [lib]
 name = "strings"
